[project]
name = "advanced-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.5",
    "html2text>=2025.4.15",
    "langchain>=0.3.26",
    "langchain-core>=0.3.68",
    "langchain-google-genai>=2.1.6",
    "langgraph>=0.5.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "typing>=3.10.0.0",
]
